fix: overflow on small screen

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   width: 100%;
   height: 100vh;
   display: flex;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
   font-family: "Work Sans", sans-serif;
